--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ethereum-cryptography": "^1.2.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "ethers": "^6.2.3",
+    "nodemon": "^2.0.22"
   }
 }
